# rusqlite

./: CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
dummy-extension/: Cargo.toml
dummy-extension/src/: lib.rs
libsqlite3-sys/: Cargo.toml  build.rs  upgrade.sh
libsqlite3-sys/bindgen-bindings/: bindgen_3.6.8-ext.rs  bindgen_3.7.16-ext.rs
libsqlite3-sys/sqlite3/: bindgen_bundled_version-ext.rs
libsqlite3-sys/src/: lib.rs
src/: error.rs  functions.rs  inner_connection.rs  lib.rs  raw_statement.rs  statement.rs  trace.rs
src/util/: mod.rs  sqlite_string.rs
src/vtab/: array.rs  mod.rs  series.rs
